app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "variables";


/* universal */

html {
  overflow-y: scroll;
}

body {
  padding-top: 60px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

/* Spacing & Alignment */

.clear { clear: both; }

.center { text-align: center; }

.float-right {
	float: right;
}

.float-left {
	float: left;
}

.top-pad {
	margin-top: 35px;
}

.top-pad-10 {
	margin-top: 10px;
}

.top-pad50 {
	margin-top: 50px;
}

/* ---- padding ---- */
/* top */
.pad-top0 { padding-top: 0; }
.pad-top5 { padding-top: 5px; }
.pad-top10 { padding-top: 10px; }
.pad-top15 { padding-top: 15px; }
.pad-top20 { padding-top: 20px; }
.pad-top25 { padding-top: 25px; }
.pad-top30 { padding-top: 30px; }
.pad-top35 { padding-top: 35px; }
.pad-top40 { padding-top: 40px; }

/* bottom */
.pad-bot0 { padding-bottom: 0; }
.pad-bot5 { padding-bottom: 5px; }
.pad-bot10 { padding-bottom: 10px; }
.pad-bot15 { padding-bottom: 15px; }
.pad-bot20 { padding-bottom: 20px; }
.pad-bot25 { padding-bottom: 25px; }
.pad-bot30 { padding-bottom: 30px; }
.pad-bot35 { padding-bottom: 35px; }
.pad-bot40 { padding-bottom: 40px; }


/* ---- margin --- */
.mar-left5 { margin-left: 5px; }
.mar-left10 { margin-left: 10px; }
.mar-left15 { margin-left: 15px; }
.mar-left20 { margin-left: 20px; }
.mar-left25 { margin-left: 25px; }
.mar-left30 { margin-left: 30px; }

.mar-right5 { margin-right: 5px; }
.mar-right10 { margin-right: 10px; }
.mar-right15 { margin-right: 15px; }
.mar-right20 { margin-right: 20px; }
.mar-right25 { margin-right: 25px; }
.mar-right30 { margin-right: 30px; }

/* top */
.mar-top0 { margin-top: 0; }
.mar-top5 { margin-top: 5px; }
.mar-top10 { margin-top: 10px; }
.mar-top15 { margin-top: 15px; }
.mar-top20 { margin-top: 20px; }
.mar-top25 { margin-top: 25px; }
.mar-top30 { margin-top: 30px; }
.mar-top35 { margin-top: 35px; }
.mar-top40 { margin-top: 40px; }
.mar-top50 { margin-top: 50px; }
.mar-top60 { margin-top: 60px; }
.mar-top70 { margin-top: 70px; }
.mar-top80 { margin-top: 80px; }
.mar-top100 { margin-top: 100px; }
.mar-top130 { margin-top: 130px; }

/* bottom */
.mar-bot0 { margin-bottom: 0; }
.mar-bot5 { margin-bottom: 5px; }
.mar-bot10 { margin-bottom: 10px; }
.mar-bot15 { margin-bottom: 15px; }
.mar-bot20 { margin-bottom: 20px; }
.mar-bot25 { margin-bottom: 25px; }
.mar-bot30 { margin-bottom: 30px; }
.mar-bot35 { margin-bottom: 35px; }
.mar-bot40 { margin-bottom: 40px; }
.mar-bot50 { margin-bottom: 50px; }
.mar-bot60 { margin-bottom: 60px; }
.mar-bot80 { margin-bottom: 80px; }
.mar-bot100 { margin-bottom: 100px; }

.wrapper {
	width: 100%;
	text-align: center;
	clear: both;
}

.nowrap {
	white-space: nowrap;
}

/* Typography */

h1 {
	text-align: center;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	clear: both;
}

h3 {
	text-align: center;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	clear: both;
	color: $gray;
}

.grey {
  color: $gray;
}

/* Header */

.container { height: 5em; }

.custom-header {
	background-color: #B2D583;
	border-bottom: 5px solid #8CC147;
	vertical-align: middle;
}

#logo {
	color: white;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	font-size: 32px;
	padding-top: 25px;
}

.nav li {
		margin-top:10px;
		font-size: 1.1em;
}

.alert-badge {
	position: absolute;
	margin: 3px 0 0 88px;
	font-size: 10px;
	text-align: center;
	color: white;
	background: #E34242;
	width: 18px;
	height: 18px;
	border: 2px solid white;
	border-radius: 100%;
}

/* Buttons */

.btn {
  a:link {color:#FF0000;}
  a:visited {color:#00FF00;}
}

.btn-spacer {
	margin: -20px 0 25px 10px;
}

.delete-btn {
	float: right;
	margin: 50px 50px 0 0;
}

.transparent-btn {
	border: none;
	background: none;
	margin: 0;
	padding: 0;
}

@mixin btn-round {
  display:block;
  border: 2px solid #f5f5f5;
  border-radius: 50%;
  color:#f5f5f5;
  text-align:center;
  text-decoration:none;
  background: #464646;
  box-shadow: 0 0 3px gray;
  font-weight:bold;
  margin: 0 auto;
	 &:hover {
		 background: #262626;
		 color: white;
	}
}

.btn-round-lg {
	@include btn-round;
	width:80px;
  height:80px;
  line-height:50px;
  font-size:34px;
  padding-top: 12px;
}

.btn-round-sm {
	@include btn-round;
	width:50px;
  height:50px;
  line-height: 43px;
  font-size: 18px;
}

/* Forms */

input, textarea, select, .uneditable-input {
  border: 1px solid #CFCFCF;
  border-radius: 5px;
  padding: 5px;
  margin: 7px 0;
  /* @include box_sizing; */
} 

.control-label {
	margin-top: 8px;
}

.form-spacer {
	margin-bottom: 40px;
	display: block;
	clear: both;
}

.form-submit-btns {
	margin-top: 20px;
	span {
		color: $gray;
	}
}

/* Tables */

.table .highlight {
	background-color: #FCFFDE;
}

/* Set Date for logs/index */

.date-select {
	float: right;
	margin:35px 0 0 0;
}

.today-btn {
	float: right;
	margin: 85px -222px 0 0;
	font-size: .8em;
	color: #428bca;
}

/* Cases date on index page */
.next-prev-wrapper {
	clear: both;
	margin: 0 auto 0 auto;
	display: inline-block;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
}

.next-prev-title {

	font-size: 2.5em;
	float: left;
}

.prev-btn {
	float: left;
	margin: 0 15px 0 0;
	font-size: 2.5em;
	color: #428bca;
}

.next-btn {
	float: left;
	margin-left: 15px;
	font-size: 2.5em;
	color: #428bca;
}

.case-count {
	clear: both;
	font-style: italic;
	color: $gray;
	text-align: center;
}

/* Cases table */

.col-time {
	min-width: 95px;
}

.col-type {
	min-width: 90px;
}

.col-person {
	white-space: nowrap;
	min-width: 120px;
}

.col-length {
	min-width: 65px;
}

.col-tags {
	min-width: 130px;
}

.col-rep {
	min-width: 80px;
}

.col-app-note {
	min-width: 68px;
}

.highlight-red {
	background-color: #FF8A8A;
	border-radius: 2px;
	padding: 3px;
}
.highlight-yellow {
	background-color: #FFF154;
	border: 1px dashed #858585;
	border-radius: 4px;
	width: 21px;
	padding: 3px 5px;
	cursor: default;
	z-index: 1;
}

.highlight-missed-call {
	background-color: #A3FFFD !important;
	border-radius: 2px;
	padding: 3px;
}

.tooltipster {
	opacity: 1;
}

.tooltipster-punk {
	border-radius: 5px; 
	border-bottom: 3px solid #8CC147;
	background: #2a2a2a;
	color: #fff;
}
.tooltipster-punk .tooltipster-content {
	font-size: 14px;
	line-height: 16px;
	padding: 8px 10px;
}

/* tags */

.chosen-choices {
  border: 1px solid #CFCFCF;
  border-radius: 5px;
  padding: 5px;
  margin: 7px 0;
}

.tags {
	ul {
	}

	li {
		list-style-type: none;
		margin: 2px 0 2px -40px;
		padding: 2px 4px 2px 4px;
		font-size: 0.8em;
		color: white;
		background-color: $gray;
		border-radius:4px;
		display: inline-block;
		white-space: nowrap;
	}

	li:before {
		background: #fff;
    	width: 6px;
    	height: 6px;
    	content: "";
    	display: inline-block;
    	border-radius: 20px;
    	margin: 0 5px 0 0;
	}
}

